Spelling and ortographic corrections.

--- a/BlazorMovies/Client/Pages/06-ConsumingApi/08-Pagination.razor
+++ b/BlazorMovies/Client/Pages/06-ConsumingApi/08-Pagination.razor
@@ -907,7 +907,7 @@
     PersonDetails component we just created:
 </p>
 <div class="image-lesson mb-3">
-    <img src="Images/14-pagination/"
+    <img src="Images/14-pagination/59-movie-bulletin.png"
          alt="MovieBulletin actor hypertext redirects to PersonDetails." />
 </div>
 <p>
