--- a/BlazorMovies/Client/Pages/07-Security/01-SecurityFundamentals.razor
+++ b/BlazorMovies/Client/Pages/07-Security/01-SecurityFundamentals.razor
@@ -93,7 +93,7 @@
         identified in a context.
     </dd>
     <dd>
-        Within a particular context, and entity is something that claims an
+        Within a particular context, an entity is something that claims an
         <dfn>identity</dfn>.
     </dd>
     <dt>Identity</dt>
@@ -275,9 +275,6 @@
         <a href="https://docs.microsoft.com/en-us/aspnet/core/security/authorization/limitingidentitybyscheme?view=aspnetcore-6.0">
             Authorize with a specific scheme in ASP.Net Core
         </a>
-    </li>
-    <li href="https://docs.microsoft.com/en-us/aspnet/core/security/authorization/limitingidentitybyscheme?view=aspnetcore-6.0">
-        Authorize with a specific scheme in ASP.Net Core
     </li>
 </ul>
 <p>
