--- a/BlazorMovies/Client/Pages/07-Security/06-ProtectApi.razor
+++ b/BlazorMovies/Client/Pages/07-Security/06-ProtectApi.razor
@@ -1021,10 +1021,10 @@
 <p>
     It should still report that the HttpClient request is built with with the
     HttpClientNoJwt service because the GetFlixManagerDtoTask endpoint is decorated with
-    an <code>[AllowAnonymous]</code> authorizationn attribute:
+    an <code>[AllowAnonymous]</code> authorization attribute:
 </p>
 <div class="image-lesson mb-3">
-    <img src="Images/15-security/46-console-flix-manager.png"
+    <img src="Images/17-protect-api/46-console-flix-manager.png"
          alt="Console reports HttpClientNoJwt used to build Http request." />
 </div>
 <p>
