--- a/BlazorMovies/Client/Pages/09-Miscellaneous/05-Internationalization.razor
+++ b/BlazorMovies/Client/Pages/09-Miscellaneous/05-Internationalization.razor
@@ -846,7 +846,7 @@
 <div class="alert alert-warning" role="alert">
     <p style="margin: 0; padding: 0; color: rgb(71, 68, 68); font-size: .90rem">
         The LocalizationServices class <strong>must</strong> implement JS isolation.
-        Otherwise, it will sometimes throw and an exception during the application 
+        Otherwise, it will sometimes throw an exception during the application 
         build up process because the <strong><code>getFromLocalStorage</code></strong>
         function cannot be found because the global .js file might not be loaded on
         time:
