--- a/BlazorMovies/Client/Pages/09-Miscellaneous/06-HtmlMetadata.razor
+++ b/BlazorMovies/Client/Pages/09-Miscellaneous/06-HtmlMetadata.razor
@@ -43,7 +43,7 @@
 </p>
 <h4>HTML Fundamentals</h4>
 <p>
-    HTM is the language that web pages are written in. The main characteristics of
+    HTML is the language that web pages are written in. The main characteristics of
     HTML are:
 </p>
 <ul>
@@ -206,7 +206,7 @@
     Since Blazor is a Single-page application framework where each component maintains its
     own state and specifies itw own rendering logic, <a href="01-blazor">
         components do not render directly to the DOM
-    </a> because the application application is running inside &lt;body&gt; of the
+    </a> because the application is running inside &lt;body&gt; of the
     static HTML host page. They instead render to an in-memory representation of the DOM
     called the <code>RenderTree</code> where Blazor compares the newly rendered output with
     the previous output to calculate a UI difference that it then applies efficiently to the
@@ -287,7 +287,7 @@
 <p>
     The <dfn>Microsoft.AspNetCore.Components.Web</dfn> <strong><code>HeadOutlet</code></strong>
     component renders content provided by <code>PageTitle</code> and <code>HeadContent</code>
-    components. In an app create from a Blazor WebAssembly project template, the
+    components. In an app created from a Blazor WebAssembly project template, the
     <code>HeadOutlet</code> component is added to the <dfn>RootComponents</dfn> collection
     of the <dfn>WebAssemblyHostBuilder</dfn> in Application/Client Program.cs class:
 </p>
