--- a/BlazorMovies/Client/Pages/12-Pwa/02-CreatingPwa.razor
+++ b/BlazorMovies/Client/Pages/12-Pwa/02-CreatingPwa.razor
@@ -51,7 +51,7 @@
 </div>
 <p>
     This application will serve as an example of various configuration options for our Flix
-    Manager application. Therefore, it must be include these features to make them as similar
+    Manager application. Therefore, it must include these features to make them as similar
     as possible.
 </p>
 <p>
