Replaced Azure SQL Database for a free plan in Azure.

--- a/BlazorMovies/Client/Pages/02-Components/02-ComponentsPartFour.razor
+++ b/BlazorMovies/Client/Pages/02-Components/02-ComponentsPartFour.razor
@@ -274,7 +274,7 @@
     i.e., don't include individual components and the <code>bootstrap.bundle.js</code> file.
 </p>
 
-<h5>3. Use a Package Manger to compile Bootstrap's CSS and JS source files</h5>
+<h5>3. Use a Package Manager to compile Bootstrap's CSS and JS source files</h5>
 <p>
     Downloading and <strong>installing</strong> a package manager such as
     <a href="https://marketplace.visualstudio.com/items?itemName=MadsKristensen.WebCompiler">
