--- a/BlazorMovies/Client/Pages/05-Api/06-ApiDbSupport.razor
+++ b/BlazorMovies/Client/Pages/05-Api/06-ApiDbSupport.razor
@@ -490,7 +490,7 @@
     SQL_Latin1_General_CP1_CS_AS
 </p>
 <p>
-    Suggested collection with UTF-8 support: Latin1_General_100_CS_AS_SC_UTF8
+    Suggested collation with UTF-8 support: Latin1_General_100_CS_AS_SC_UTF8
 </p>
 
 <p>
