--- a/BlazorMovies/Client/Pages/06-ConsumingApi/05-Filters.razor
+++ b/BlazorMovies/Client/Pages/06-ConsumingApi/05-Filters.razor
@@ -977,7 +977,7 @@
     <span class="badge bg-dark">Step Three</span> Update the Genres field in the view
     file of the MoviesSearch component. Its <code>&lt;select&gt;</code> element is bound
     to the MoviesQueryFilterDto.Genre member and as menetioned above, it is fed with
-    lower case values. This means the the attribute value for each <code>&lt;option&gt;</code>
+    lower case values. This means the attribute value for each <code>&lt;option&gt;</code>
     in the <code>&lt;select&gt;</code> element must be lower case or data binding will
     not work properly:
 </p>
