--- a/BlazorMovies/Client/Pages/10-Deployment/01-DeploymentIntro.razor
+++ b/BlazorMovies/Client/Pages/10-Deployment/01-DeploymentIntro.razor
@@ -217,13 +217,13 @@
         rather than a CA.
     </dd>
     <dd>
-        They are considered unsafe for public-facing websited and applications but
+        They are considered unsafe for public-facing websites and applications but
         they are often used for internal testing environments or web servers that
         are locked down to external users.
     </dd>
     <dd>
         Whenever a user visits a site that is using a self-signed certificate, a
-        prompt immediately appears with a security warning that required the user
+        prompt immediately appears with a security warning that requires the user
         to confirm that they would like to proceed. These warnings create fear and
         uneasiness for visitors.
     </dd>
@@ -235,7 +235,7 @@
         They cost the least to apply for.
     </dd>
     <dd>
-        Applicants to through a less stringent vetting process. Prove of domain
+        Applicants go through a less stringent vetting process. Prove of domain
         ownership is by responding to a verification email or phone call.
     </dd>
     <dt>Organization Validated certificate (OV)</dt>
