--- a/BlazorMovies/Client/Pages/10-Deployment/10-HttpsWebApp.razor
+++ b/BlazorMovies/Client/Pages/10-Deployment/10-HttpsWebApp.razor
@@ -107,7 +107,7 @@
     <a href="09-custom-domain-web-app">
         last lesson
     </a> we chose to use a managed certificate for the "app.flix-manager.com" subdomain
-    and an external CA certificate for the "www.app.flix-manager.com" subdomain. These way
+    and an external CA certificate for the "www.app.flix-manager.com" subdomain. This way
     we can demonstrate both approaches eventhough it not necessary to get an external
     certificate.
 </p>
@@ -145,7 +145,7 @@
 </div>
 <p>
     At this point, the certificate is created and valid but it is not yet bound to the
-    custom domain that it was created for (app.flix-manager.com). It is time to generate
+    custom domain that was created for (app.flix-manager.com). It is time to generate
     an SSL/TLS certificate from an external CA for the "www.app.flix-manager.com" subdomain.
 </p>
 <p>
