--- a/BlazorMovies/Client/Pages/04-Forms/04-FormsPartOne.razor
+++ b/BlazorMovies/Client/Pages/04-Forms/04-FormsPartOne.razor
@@ -1169,7 +1169,7 @@
     In other words, Base64 is a group of binary-to-text encoding schemes that represent binary
     data (more specifically a sequence of 8-bit bytes) in an ASCII string format. Common to all
     binary-to-text encoding schemes, Base64 is designed to carry data stored in binary format
-    across channels that only reliably support text conent. <strong>
+    across channels that only reliably support text content. <strong>
         Base64 is particularly prevalent on the World Wide Web where its uses include the
         ability to embed image files or other binary assets inside textual assets such as HTML
         and CSS files.
